@@ -55,6 +55,7 @@
 	- make dependency generation "opt-out" everywhere.
 	- rebuild against glibc with fcntl fixed in libpthread.
 	- re-enable CDB locking, removing "private" from %%__dbi_cdb macro.
+	- popt aliases for -U et al to achieve dynamic link with nptl.
 
 4.0.4 -> 4.1:
 	- loosely wire beecrypt library into rpm.
